--- a/virtual_app/templates/meeting_room.html
+++ b/virtual_app/templates/meeting_room.html
@@ -1,51 +1,61 @@
+<!-- meeting_room.html -->
 {% load static %}
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Meeting Room - {{ meeting.title }}</title>
-    <!-- Include your CSS and other meta tags here -->
-</head>
-<body>
-    <div class="container mt-5">
-        <div class="row">
-            <div class="col">
-                <h2>Meeting Room - {{ meeting.title }}</h2>
-            </div>
-        </div>
-        <div class="row mt-4">
-            <div class="col-8">
-                <div id="localVideoContainer">
-                    <video id="localVideo" autoplay muted></video>
-                </div>
-            </div>
-            <div class="col-4">
-                <div id="remoteVideoContainer">
-                    <!-- Remote videos will be displayed here -->
-                </div>
-            </div>
-        </div>
-        <div class="row mt-4">
-            <div class="col">
-                <button id="startScreenShareBtn">Start Screen Share</button>
-            </div>
-        </div>
-    </div>
-    <script src="{% static 'js/meeting_room.js' %}"></script><script>
-        const startScreenShareBtn = document.getElementById('startScreenShareBtn');
-      
-        // Event listener for the "Start Screen Share" button
-        startScreenShareBtn.addEventListener('click', async () => {
-          // Get user media (screen sharing)
-          const stream = await navigator.mediaDevices.getDisplayMedia({ video: true });
-      
-          // Replace the local video stream with the screen sharing stream
-          localVideo.srcObject = stream;
-          
-          // Add the screen sharing stream to the peer connection
-          peer.addStream(stream);
-        });
-      </script>
-      
 
+{% block title %}Meeting Room - {{ meeting.title }}{% endblock %}
+
+{% block content %}
+<div class="container mt-5">
+  <div class="row">
+    <div class="col">
+      <h2>Meeting Room - {{ meeting.title }}</h2>
+      {% if is_host %}
+        <p>You are the host of this meeting.</p>
+      {% else %}
+        <p>You are a participant in this meeting.</p>
+      {% endif %}
+    </div>
+  </div>
+  <div class="row mt-4">
+    <div class="col-8">
+      <div id="localVideoContainer">
+        <video id="localVideo" playsinline autoplay muted></video>
+        <video id="remoteVideo" playsinline autoplay></video>
+      </div>
+    </div>
+    <div class="col-4">
+      <div id="remoteVideoContainer">
+        <!-- Remote videos will be displayed here -->
+      </div>
+      <div>
+        <button id="startButton">Start</button>
+        <button id="callButton">Call</button>
+        <button id="upgradeButton">Turn on video</button>
+        <button id="hangupButton">Hang Up</button>
+      </div>
+      {% if is_host %}
+        <button id="startScreenShareBtn">Start Screen Share</button>
+      {% endif %}
+    </div>
+  </div>
+</div>
+{% endblock %}
+
+<script src="{% static 'js/meeting_room.js' %}"></script>
+<script>
+  const startScreenShareBtn = document.getElementById('startScreenShareBtn');
+
+  // Event listener for the "Start Screen Share" button
+  startScreenShareBtn.addEventListener('click', async () => {
+    // Get user media (screen sharing)
+    const stream = await navigator.mediaDevices.getDisplayMedia({ video: true });
+
+    // Replace the local video stream with the screen sharing stream
+    localVideo.srcObject = stream;
+
+    // Add the screen sharing stream to the peer connection
+    pc1.addTrack(stream.getVideoTracks()[0], stream);
+    upgradeButton.disabled = true;
+  });
+</script>
 </body>
 </html>
